Fix "Add widget" window display (now take 100% width, don't scroll if description is too long but go to line)

--- a/sources/www/css/pickup-controller.css
+++ b/sources/www/css/pickup-controller.css
@@ -76,13 +76,14 @@
 }
 
 #add-pickup-details .table-responsive {
-    width: 70%;
+    width: 100%;
     -ms-border-radius: 3px;
     border-radius: 3px;
 }
 
 #add-pickup-details .table-responsive td {
     border: none;
+    white-space: initial;
 }
 
 #add-pickup-details .table-responsive .header-info {
